Update 6.2 Comentarios película "The Imitation Game".md

--- a/Tema 6/6.2 Comentarios película "The Imitation Game".md
+++ b/Tema 6/6.2 Comentarios película "The Imitation Game".md
@@ -41,14 +41,14 @@ Aún con ese importante aporte, Turing fue perseguido por ser homosexual, termin
 castración química.
 
 ## Temas y mensajes principales
- · **Inteligencia y Genialidad:** Aquellos con talento y pueden cambiar el curso de la historia, mostrando el valor del pensamiento fuera de
+1. **Inteligencia y Genialidad:** Aquellos con talento y pueden cambiar el curso de la historia, mostrando el valor del pensamiento fuera de
      lo común. A veces lo diferente puede guiar a un mejor rumbo.
- · **Guerra y Moralidad:** Mi favorito, dilemas éticos sobre las decisiones difíciles tomadas durante la guerra como ya mencioné anteriormente,
+2. **Guerra y Moralidad:** Mi favorito, dilemas éticos sobre las decisiones difíciles tomadas durante la guerra como ya mencioné anteriormente,
      a veces se tendrán que sacrificar unos pocos para salvar a muchos. Pero, ¿eso es lo correcto?
- · **Discriminación:** Muestra como en esos tiempor valían más lo prejuicios y la opinión pública que lo que logra uno.
+3. **Discriminación:** Muestra como en esos tiempor valían más lo prejuicios y la opinión pública que lo que logra uno.
      Turing sufrió por su orientación sexual, salvó a muchos, estaba dispuesto a hacerlo, pero si se sabía que era gay al parecer era peor que ser
      espía enemigo.
- · **Trabajo en Equipo y Aceptación:** A pesar de sus diferencias, el equipo en Bletchley Park aprendió a trabajar juntos, aceptando y valorando sus
+4. **Trabajo en Equipo y Aceptación:** A pesar de sus diferencias, el equipo en Bletchley Park aprendió a trabajar juntos, aceptando y valorando sus
      respectivas habilidades.
 
 ## Opinión crítica:
